Field generator: getCollectionElementClass method not generated when no addElement method is present in interface
Closes #16255